--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
     </nav>
 
     <div class="rounded-shape-header"></div>
-    <div class="background-grid"></div>
 
     <div class="sections">
         <section id="section-1" class="section">
@@ -54,7 +53,7 @@
             </p>
             <p class="section-text">
                 A passionate Computer Engineering student with a keen interest in coding and exploring the endless
-                creative possibilities offered by computer science
+                creative possibilities offered by computer science.
             </p>
             <p class="section-text">
                 This portfolio is an extension of my CV, showcasing a curated selection of projects I have developed
