--- a/projects/TourDesStades/page.html
+++ b/projects/TourDesStades/page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tour des Stades - Project Details</title>
-    <link rel="stylesheet" href="../../../../css/styles.css">
+    <link rel="stylesheet" href="../../css/styles.css">
     <link rel="stylesheet" href="../../css/projects-page.css">
     <link rel="stylesheet" href="../../css/menu.css">
     <link rel="stylesheet" href="../../css/contact.css">
