update mobile version

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Portfolio - Florestan Trillot</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/logo.css">
@@ -25,7 +25,7 @@
         <div class="right-circle-bar-subtitle"></div>
         <div class="bar-subtitle"></div>
         <div class="subtitle">
-            <p>// Computer Engineering Student</p>
+            <p>// Computer Engineering Student</p>  
         </div>
     </header>
 
@@ -35,12 +35,14 @@
         <span></span>
     </div>
 
+    <svg class="svg-curve" viewBox="0 0 1440 79" xmlns="http://www.w3.org/2000/svg">
+        <path fill="#230b46" d="M-100 79C-100 79 218.416 40 693.5 40C1168.58 40 1487 79 1487 79V0H-100V79Z"></path>
+    </svg>
+    
     <nav class="menu">
         <a href="#section-2">PROJECTS</a>
         <a href="#section-3">CONTACT</a>
     </nav>
-
-    <div class="rounded-shape-header"></div>
 
     <div class="sections">
         <section id="section-1" class="section">
@@ -172,6 +174,7 @@
     </footer>
 
     <script src="/js/menu.js"></script>
+    <script src="js/to-mobile.js"></script>
 
 </body>
 
