--- a/projects/TourDesStades/page.html
+++ b/projects/TourDesStades/page.html
@@ -43,7 +43,7 @@
         </div>
         <div class="description-category">
             <span class="description-title">Collaborators</span>
-            <span class="description-info">Victorien Trillot | Erwan Suire</span>
+            <span class="description-info">Victorien Trillot</span>
         </div>
         <div class="description-text">
             <span>Tour des Stades is a mobile application allows users to log all the sports matches they have attended
