update mobile version + nouveau CV

--- a/mobile-error.html
+++ b/mobile-error.html
@@ -21,6 +21,10 @@
         
         <span class="copyright">&copy; 2025 Florestan Trillot</span>
     </div>
+
+    <div class="cv-container">
+        <img src="images/CV.jpg" alt="CV de Florestan Trillot" class="cv-img">
+    </div>
     
 
     <script src="js/to-pc.js"></script>
