update mobile version

--- a/mobile-error.html
+++ b/mobile-error.html
@@ -12,7 +12,7 @@
         <img src="images/icons/no-mobile.png" alt="Non compatible" class="warning-icon">
         <h1>Sorry !</h1>
         <p>This portfolio is currently only available on the desktop.</p>
-        <p>Feel free to explore my profil</p>
+        <p>Feel free to explore my profil and my CV</p>
 
         <div class="button-container">
             <a href="https://github.com/Floorestan" target="_blank" class="btn">GitHub</a>
