restyle + add skills section + add project energy load simulator and remove portfolio

--- a/projects/Energy-load-simulator/page.html
+++ b/projects/Energy-load-simulator/page.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stoum - Project Details</title>
+    <title>My Portfolio - Project Details</title>
     <link rel="stylesheet" href="../../css/styles.css">
     <link rel="stylesheet" href="../../css/projects-page.css">
     <link rel="stylesheet" href="../../css/menu.css">
+    <link rel="stylesheet" href="../../css/contact.css">
 </head>
 
 <body>
     <div class="background-stoum-grid"></div>
     <div class="entete">
-        <span class="project-name">Stoum</span>
+        <span class="project-name">Energy Load Simulator</span>
     </div>
 
     <div class="button">
@@ -28,15 +29,23 @@
         <a href="../../index.html#section-3">PROJECTS</a>
         <a href="../../index.html#section-4">CONTACT</a>
     </nav>
-
+    
     <div class="description">
         <div class="description-category">
             <span class="description-title">Project Type</span>
-            <span class="description-info">Personal Project – Game Development</span>
+            <span class="description-info">Engineering Research Project (TIPE)</span>
         </div>
         <div class="description-category">
             <span class="description-title">Technologies</span>
-            <span class="description-info">Python</span>
+            <span class="description-info">Python, Tkinter</span>
+        </div>
+        <div class="description-category">
+            <span class="description-title">Client</span>
+            <span class="description-info">DVPLAST</span>
+        </div>
+        <div class="description-category">
+            <span class="description-title">Team</span>
+            <span class="description-info">Nathan Aflalo | Mathis Alvarez | Clément Riou</span>
         </div>
         <div class="description-category">
             <span class="description-title">Date</span>
@@ -44,40 +53,23 @@
         </div>
         <div class="description-text">
             <span>
-              Stoum is a word-guessing game built in Python, inspired by 
-              <em>“Motus”</em> (France), or <em>“Wordle”</em>. Developed during my free time to practice 
-              algorithmic logic and user interaction.
+              This project is an interactive Python tool using Tkinter to model and visualize industrial power consumption,
+              detect overloads, and simulate load-shedding strategies for network optimization.
             </span>
         </div>
       </div>
-      
+
     <div class="presentation-page">
         <img src="1.png" alt="">
     </div>
-    <div class="presentation-page">
-        <img src="2.png" alt="">
-    </div>
-    <div class="presentation-page">
-        <img src="3.png" alt="">
-    </div>
-    <div class="presentation-page">
+
+    <div class="display-horizontal-screen">
+        <img class="horizontal" src="img.png" alt="">
+        <img src="img-hover.png" alt="">
         <img src="4.png" alt="">
-    </div>
-    <div class="presentation-page">
         <img src="5.png" alt="">
     </div>
-    <div class="presentation-page">
-        <img src="6.png" alt="">
-    </div>
-    <div class="presentation-page">
-        <img src="7.png" alt="">
-    </div>
-    <div class="presentation-page">
-        <img src="8.png" alt="">
-    </div>
-    <div class="presentation-page">
-        <img src="9.png" alt="">
-    </div>
+
 
     <footer class="footer">
         <span class="footer-copyright">&copy; 2025 Florestan Trillot</span>
