--- a/projects/F1-driver/page.html
+++ b/projects/F1-driver/page.html
@@ -14,7 +14,7 @@
 <body>
     <div class="background-stoum-grid"></div>
     <div class="entete">
-        <span class="project-name">F1-Driver.</span>
+        <span class="project-name">F1-Driver</span>
     </div>
 
     <div class="button">
@@ -25,31 +25,34 @@
 
     <nav class="menu">
         <a href="../../index.html">HOME</a>
-        <a href="../../index.html#section-2">PROJECTS</a>
-        <a href="../../index.html#section-3">CONTACT</a>
+        <a href="../../index.html#section-2">SKILLS</a>
+        <a href="../../index.html#section-3">PROJECTS</a>
+        <a href="../../index.html#section-4">CONTACT</a>
     </nav>
+    
     <div class="description">
         <div class="description-category">
-            <span class="description-title">Category</span>
+            <span class="description-title">Project Type</span>
             <span class="description-info">Engineering school project</span>
         </div>
         <div class="description-category">
-            <span class="description-title">Language</span>
+            <span class="description-title">Technologies</span>
             <span class="description-info">C</span>
-        </div>
-        <div class="description-category">
-            <span class="description-title">Date</span>
-            <span class="description-info">2024</span>
         </div>
         <div class="description-category">
             <span class="description-title">Team</span>
             <span class="description-info">Benjamin Boccara | Matthieu Castetz</span>
+        </div>
+        <div class="description-category">
+            <span class="description-title">Date</span>
+            <span class="description-info">2024</span>
         </div>
         <div class="description-text">
             <span>F1-Driver is a semester-long project from my first year of engineering school, focusing on trajectory
                 management and decision-making for a digital race car on different circuits.</span>
         </div>
     </div>
+
     <div class="presentation-page">
         <img src="1.png" alt="">
     </div>
