--- a/projects/MyPortfolio/page.html
+++ b/projects/MyPortfolio/page.html
@@ -14,7 +14,7 @@
 <body>
     <div class="background-stoum-grid"></div>
     <div class="entete">
-        <span class="project-name">My Portfolio.</span>
+        <span class="project-name">My Portfolio</span>
     </div>
 
     <div class="button">
@@ -25,26 +25,36 @@
 
     <nav class="menu">
         <a href="../../index.html">HOME</a>
-        <a href="../../index.html#section-2">PROJECTS</a>
-        <a href="../../index.html#section-3">CONTACT</a>
+        <a href="../../index.html#section-2">SKILLS</a>
+        <a href="../../index.html#section-3">PROJECTS</a>
+        <a href="../../index.html#section-4">CONTACT</a>
     </nav>
+    
     <div class="description">
         <div class="description-category">
-            <span class="description-title">Category</span>
-            <span class="description-info">Personal project</span>
+            <span class="description-title">Project Type</span>
+            <span class="description-info">Personal project - Web page</span>
         </div>
         <div class="description-category">
-            <span class="description-title">Languages</span>
-            <span class="description-info">HTML | CSS | JS</span>
+            <span class="description-title">Technologies</span>
+            <span class="description-info">HTML, CSS, JS</span>
         </div>
         <div class="description-category">
             <span class="description-title">Status</span>
             <span class="description-info">In development</span>
         </div>
+        <div class="description-category">
+            <span class="description-title">Date</span>
+            <span class="description-info">2025</span>
+        </div>
         <div class="description-text">
             <span>This portfolio showcases a selection of projects I have developed throughout my studies and personal
                 time, highlighting my passion for coding, design, and the creative possibilities of computer
-                science.</span>
+                science.
+            
+                description : 
+                This portfolio was designed and developed from scratch to
+                showcase my projects and skills. Built with HTML, CSS, and JavaScript</span>
         </div>
     </div>
 
