--- a/projects/TourDesStades/page.html
+++ b/projects/TourDesStades/page.html
@@ -14,7 +14,7 @@
 <body>
     <div class="background-stoum-grid"></div>
     <div class="entete">
-        <span class="project-name">Tour des Stades.</span>
+        <span class="project-name">Tour des Stades</span>
     </div>
 
     <div class="button">
@@ -25,25 +25,31 @@
 
     <nav class="menu">
         <a href="../../index.html">HOME</a>
-        <a href="../../index.html#section-2">PROJECTS</a>
-        <a href="../../index.html#section-3">CONTACT</a>
+        <a href="../../index.html#section-2">SKILLS</a>
+        <a href="../../index.html#section-3">PROJECTS</a>
+        <a href="../../index.html#section-4">CONTACT</a>
     </nav>
+    
     <div class="description">
         <div class="description-category">
-            <span class="description-title">Category</span>
-            <span class="description-info">Personal project</span>
+            <span class="description-title">Project Type</span>
+            <span class="description-info">Personal project - Mobile Application</span>
         </div>
         <div class="description-category">
-            <span class="description-title">Languages</span>
-            <span class="description-info">Flutter | Dart</span>
+            <span class="description-title">Technologies</span>
+            <span class="description-info">Flutter, Dart</span>
         </div>
         <div class="description-category">
             <span class="description-title">Status</span>
             <span class="description-info">In development</span>
         </div>
         <div class="description-category">
-            <span class="description-title">Collaborators</span>
+            <span class="description-title">Team</span>
             <span class="description-info">Victorien Trillot</span>
+        </div>
+        <div class="description-category">
+            <span class="description-title">Date</span>
+            <span class="description-info">2025</span>
         </div>
         <div class="description-text">
             <span>Tour des Stades is a mobile application allows users to log all the sports matches they have attended
@@ -54,6 +60,14 @@
     <div class="presentation-page">
         <img src="1.png" alt="">
     </div>
+
+    <div class="display-vertical-screen">
+        <img src="2.png" alt="">
+        <img src="3.png" alt="">
+        <img src="4.png" alt="">
+        <img src="5.png" alt="">
+    </div>
+
 
     <footer class="footer">
         <span class="footer-copyright">&copy; 2025 Florestan Trillot</span>
