fix and add linkedin URLs

--- a/projects/TourDesStades/page.html
+++ b/projects/TourDesStades/page.html
@@ -45,7 +45,7 @@
         </div>
         <div class="description-category">
             <span class="description-title">Team</span>
-            <span class="description-info">Victorien Trillot</span>
+            <a href="https://www.linkedin.com/in/victorien-trillot/" class="description-info" target="_blank">Victorien Trillot</a>
         </div>
         <div class="description-category">
             <span class="description-title">Date</span>
